Fix Vignette on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -143,4 +143,8 @@ li.active > a {
   font-size: 2.5em;
 }
 
+.hero-image {
+  box-shadow: 0 0 50px rgba(0,0,0,0.9) inset;
+}
+
 }
